--- a/pages/6287.html
+++ b/pages/6287.html
@@ -312,7 +312,7 @@ margin-left: 0em;
 <div class='toc clickDown' tabindex='0'>
 <h3 id='context'>Context</h3>
 
-<h4 id='lie_theory'><math class='maruku-mathml' display='inline' id='mathml_7a3a64a06d7a16b65b6872f40fa377c4e8ec3a0a_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-Lie theory</h4>
+<h4 id='lie_theory'><math class='maruku-mathml' display='inline' id='mathml_4fa67ab6ff0b8a4ffad674ffdabf681aa396ec44_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-Lie theory</h4>
 
 <div class='hide'>
 <p><strong><a class='existingWikiWord' href='/nlab/show/infinity-Lie+theory'>∞-Lie theory</a></strong> (<a class='existingWikiWord' href='/nlab/show/higher+geometry'>higher geometry</a>)</p>
@@ -577,7 +577,7 @@ margin-left: 0em;
 
 <h2 id='examples'>Examples</h2>
 
-<h3 id='lie_groupoids_2'><math class='maruku-mathml' display='inline' id='mathml_7a3a64a06d7a16b65b6872f40fa377c4e8ec3a0a_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-Lie groupoids</h3>
+<h3 id='lie_groupoids_2'><math class='maruku-mathml' display='inline' id='mathml_4fa67ab6ff0b8a4ffad674ffdabf681aa396ec44_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-Lie groupoids</h3>
 
 <ul>
 <li>
@@ -603,7 +603,7 @@ margin-left: 0em;
 </li>
 </ul>
 
-<h3 id='lie_groups'><math class='maruku-mathml' display='inline' id='mathml_7a3a64a06d7a16b65b6872f40fa377c4e8ec3a0a_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-Lie groups</h3>
+<h3 id='lie_groups'><math class='maruku-mathml' display='inline' id='mathml_4fa67ab6ff0b8a4ffad674ffdabf681aa396ec44_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-Lie groups</h3>
 
 <ul>
 <li>
@@ -645,7 +645,7 @@ margin-left: 0em;
 </li>
 </ul>
 
-<h3 id='lie_algebroids_2'><math class='maruku-mathml' display='inline' id='mathml_7a3a64a06d7a16b65b6872f40fa377c4e8ec3a0a_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-Lie algebroids</h3>
+<h3 id='lie_algebroids_2'><math class='maruku-mathml' display='inline' id='mathml_4fa67ab6ff0b8a4ffad674ffdabf681aa396ec44_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-Lie algebroids</h3>
 
 <ul>
 <li>
@@ -683,7 +683,7 @@ margin-left: 0em;
 </li>
 </ul>
 
-<h3 id='lie_algebras'><math class='maruku-mathml' display='inline' id='mathml_7a3a64a06d7a16b65b6872f40fa377c4e8ec3a0a_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-Lie algebras</h3>
+<h3 id='lie_algebras'><math class='maruku-mathml' display='inline' id='mathml_4fa67ab6ff0b8a4ffad674ffdabf681aa396ec44_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-Lie algebras</h3>
 
 <ul>
 <li>
@@ -734,17 +734,34 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#definition'>Definition</a></li><li><a href='#properties'>Properties</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='definition'>Definition</h2>
 
-<p>A <a class='existingWikiWord' href='/nlab/show/Lie+algebra'>Lie algebra</a> <math class='maruku-mathml' display='inline' id='mathml_7a3a64a06d7a16b65b6872f40fa377c4e8ec3a0a_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝔤</mi></mrow><annotation encoding='application/x-tex'>\mathfrak{g}</annotation></semantics></math> is called <em>reductive</em> if the following equivalence conditions hold:</p>
+<p>A <a class='existingWikiWord' href='/nlab/show/Lie+algebra'>Lie algebra</a> <math class='maruku-mathml' display='inline' id='mathml_4fa67ab6ff0b8a4ffad674ffdabf681aa396ec44_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝔤</mi></mrow><annotation encoding='application/x-tex'>\mathfrak{g}</annotation></semantics></math> is called <em>reductive</em> if the following equivalence conditions hold:</p>
 
 <ol>
 <li>
-<p>it is the <a class='existingWikiWord' href='/nlab/show/direct+sum'>direct sum</a> <math class='maruku-mathml' display='inline' id='mathml_7a3a64a06d7a16b65b6872f40fa377c4e8ec3a0a_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝔤</mi><mo>≃</mo><mi>𝔥</mi><mo>⊕</mo><mi>𝔞</mi></mrow><annotation encoding='application/x-tex'>\mathfrak{g} \simeq \mathfrak{h} \oplus \mathfrak{a}</annotation></semantics></math> of a <a class='existingWikiWord' href='/nlab/show/semisimple+Lie+algebra'>semisimple Lie algebra</a> <math class='maruku-mathml' display='inline' id='mathml_7a3a64a06d7a16b65b6872f40fa377c4e8ec3a0a_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝔥</mi></mrow><annotation encoding='application/x-tex'>\mathfrak{h}</annotation></semantics></math> and an abelian Lie algebra <math class='maruku-mathml' display='inline' id='mathml_7a3a64a06d7a16b65b6872f40fa377c4e8ec3a0a_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝔞</mi></mrow><annotation encoding='application/x-tex'>\mathfrak{a}</annotation></semantics></math>;</p>
+<p>it is the <a class='existingWikiWord' href='/nlab/show/direct+sum'>direct sum</a> <math class='maruku-mathml' display='inline' id='mathml_4fa67ab6ff0b8a4ffad674ffdabf681aa396ec44_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝔤</mi><mo>≃</mo><mi>𝔥</mi><mo>⊕</mo><mi>𝔞</mi></mrow><annotation encoding='application/x-tex'>\mathfrak{g} \simeq \mathfrak{h} \oplus \mathfrak{a}</annotation></semantics></math> of a <a class='existingWikiWord' href='/nlab/show/semisimple+Lie+algebra'>semisimple Lie algebra</a> <math class='maruku-mathml' display='inline' id='mathml_4fa67ab6ff0b8a4ffad674ffdabf681aa396ec44_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝔥</mi></mrow><annotation encoding='application/x-tex'>\mathfrak{h}</annotation></semantics></math> and an abelian Lie algebra <math class='maruku-mathml' display='inline' id='mathml_4fa67ab6ff0b8a4ffad674ffdabf681aa396ec44_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝔞</mi></mrow><annotation encoding='application/x-tex'>\mathfrak{a}</annotation></semantics></math>;</p>
 </li>
 
 <li>
-<p>its <a class='existingWikiWord' href='/nlab/show/adjoint+representation'>adjoint representation</a> is completely <span class='newWikiWord'>reducible<a href='/nlab/new/reducible+representation'>?</a></span>: every invariant subspace has an invariant complement.</p>
+<p>its <a class='existingWikiWord' href='/nlab/show/adjoint+representation'>adjoint representation</a> is completely <a class='existingWikiWord' href='/nlab/show/reducible+representation'>reducible</a>: every invariant subspace has an invariant complement.</p>
 </li>
 </ol>
+
+<p>More generally:</p>
+
+<div class='num_defn' id='LieAlgebraReductiveInAmbientLieAlgebra'>
+<h6 id='definition_2'>Definition</h6>
+
+<p><strong>(<a class='existingWikiWord' href='/nlab/show/reductive+Lie+algebra'>Lie algebra reductive</a> in ambient Lie algebra)</strong></p>
+
+<p>A sub-<a class='existingWikiWord' href='/nlab/show/Lie+algebra'>Lie algebra</a></p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_4fa67ab6ff0b8a4ffad674ffdabf681aa396ec44_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝔥</mi><mo>↪</mo><mi>𝔤</mi></mrow><annotation encoding='application/x-tex'>
+  \mathfrak{h} \hookrightarrow \mathfrak{g}
+
+</annotation></semantics></math></div>
+<p>is called <em>reductive</em> if the <a class='existingWikiWord' href='/nlab/show/adjoint+representation'>adjoint</a> <a class='existingWikiWord' href='/nlab/show/Lie+algebra+representation'>Lie algebra representation</a> of <math class='maruku-mathml' display='inline' id='mathml_4fa67ab6ff0b8a4ffad674ffdabf681aa396ec44_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝔥</mi></mrow><annotation encoding='application/x-tex'>\mathfrak{h}</annotation></semantics></math> on <math class='maruku-mathml' display='inline' id='mathml_4fa67ab6ff0b8a4ffad674ffdabf681aa396ec44_12' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝔤</mi></mrow><annotation encoding='application/x-tex'>\mathfrak{g}</annotation></semantics></math> is <a class='existingWikiWord' href='/nlab/show/reducible+representation'>reducible</a>.</p>
+</div>
+
+<p>(<a href='#Koszul50'>Koszul 50</a>, recalled in e.g. <a href='#Solleveld02'>Solleveld 02, def. 2.27</a>)</p>
 
 <h2 id='properties'>Properties</h2>
 
@@ -763,22 +780,30 @@ margin-left: 0em;
 
 <h2 id='references'>References</h2>
 
-<p>For instance volume III of</p>
+<ul>
+<li id='Koszul50'>
+<p><a class='existingWikiWord' href='/nlab/show/Jean-Louis+Koszul'>Jean-Louis Koszul</a>, <em>Homologie et cohomologie des algèbres de Lie</em>, Bull. Soc. Math. France 78 (1950), 65-127</p>
+</li>
 
-<ul id='GHV'>
-<li><a class='existingWikiWord' href='/nlab/show/Werner+Greub'>Werner Greub</a>, <a class='existingWikiWord' href='/nlab/show/Stephen+Halperin'>Stephen Halperin</a>, <a class='existingWikiWord' href='/nlab/show/Ray+Vanstone'>Ray Vanstone</a>, <em><a class='existingWikiWord' href='/nlab/show/Connections%2C+Curvature%2C+and+Cohomology'>Connections, Curvature, and Cohomology</a></em> Academic Press (1973)</li>
+<li id='GHV'>
+<p><a class='existingWikiWord' href='/nlab/show/Werner+Greub'>Werner Greub</a>, <a class='existingWikiWord' href='/nlab/show/Stephen+Halperin'>Stephen Halperin</a>, <a class='existingWikiWord' href='/nlab/show/Ray+Vanstone'>Ray Vanstone</a>, volume III <em><a class='existingWikiWord' href='/nlab/show/Connections%2C+Curvature%2C+and+Cohomology'>Connections, Curvature, and Cohomology</a></em> Academic Press (1973)</p>
+</li>
+
+<li id='Solleveld02'>
+<p><a class='existingWikiWord' href='/nlab/show/Maarten+Solleveld'>Maarten Solleveld</a>, <em>Lie algebra cohomology and Macdonald’s conjectures</em>, 2002 (<a href='https://www.math.ru.nl/~solleveld/scrip.pdf'>pdf</a>)</p>
+</li>
 </ul>
 </div>
 
 <div class="revisedby">
-  Revised on June 30, 2011 18:48:15 
+  Revised on February 26, 2018 14:50:24 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (131.211.239.52)
+  (91.230.41.202)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/reductive+Lie+algebra" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/reductive+Lie+algebra/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/reductive+Lie+algebra" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/reductive+Lie+algebra" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/reductive+Lie+algebra" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/reductive+Lie+algebra/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/reductive+Lie+algebra" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/reductive+Lie+algebra" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
