--- a/pages/2642.html
+++ b/pages/2642.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -423,7 +423,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/Beilinson-Bernstein+localization'>Beĭlinson-Bernstein localization</a></p>
+<p><span class='newWikiWord'>Be?linson-Bernstein localization<a href='/nlab/new/Be%3Flinson-Bernstein+localization'>?</a></span></p>
 </li>
 
 <li>
@@ -462,6 +462,10 @@ margin-left: 0em;
 
 <ul>
 <li>
+<p><a class='existingWikiWord' href='/nlab/show/reducible+representation'>reducible representation</a></p>
+</li>
+
+<li>
 <p><a class='existingWikiWord' href='/nlab/show/simple+object'>simple object</a></p>
 </li>
 
@@ -499,14 +503,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on August 19, 2016 09:57:05 
+  Revised on February 26, 2018 14:14:48 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (89.204.137.193)
+  (91.230.41.202)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/irreducible+representation" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/irreducible+representation/14" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(14 revisions)</span> | <a href="/nlab/show/diff/irreducible+representation" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/irreducible+representation" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/irreducible+representation" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/irreducible+representation/15" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(15 revisions)</span> | <a href="/nlab/show/diff/irreducible+representation" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/irreducible+representation" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
