--- a/pages/6004.html
+++ b/pages/6004.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -481,7 +481,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/etale+geometric+morphism'>étale geometric morphism</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/%C3%A9tale+geometric+morphism'>étale geometric morphism</a></p>
 </li>
 
 <li>
@@ -776,21 +776,25 @@ margin-left: 0em;
 </div>
 </div>
 
-<p>This entry is to record the monograph</p>
+<p>This entry is to record the monograph on <a class='existingWikiWord' href='/nlab/show/category+theory'>category theory</a> and <a class='existingWikiWord' href='/nlab/show/sheaf+and+topos+theory'>topos theory</a>.</p>
 
 <ul>
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/Francis+Borceux'>Francis Borceux</a>, <em>Handbook of Categorical Algebra</em>, Cambridge University Press (1994)</p>
 
-<p>1: Basic Category Theory, <a href=''>gBooks</a></p>
-
-<p>2: Categories and Structures, <a href=''>gBooks</a></p>
-
-<p>3: Categories of Sheaves, <a href='http://books.google.fr/books/about/Handbook_of_Categorical_Algebra_Categori.html?id=7jgots78faUC'>gBooks</a></p>
+<p>Vol. 1: Basic Category Theory, <a href=''>gBooks</a></p>
 </li>
 </ul>
 
-<p>on <a class='existingWikiWord' href='/nlab/show/category+theory'>category theory</a> and <a class='existingWikiWord' href='/nlab/show/sheaf+and+topos+theory'>topos theory</a>.</p>
+<p>Introduction; 1. The language of categories; 2. Limits; 3. Adjoint functors; 4. Generators and projectives; 5. Categories of fractions; 6. Flat functors and Cauchy completeness; 7. Bicategories and distributors; 8. Internal category theory; Bibliography; Index.</p>
+
+<p>Vol. 2: Categories and Structures, <a href=''>gBooks</a></p>
+
+<p>Preface; Introduction to the handbook; 1. Abelian categories; 2. Regular categories; 3. Algebraic theories; 4. Monads; 5. Accessible categories; 6. Enriched category theory; 7. Topological categories; 8. Fibred categories; Bibliography; Index.</p>
+
+<p>3: Categories of Sheaves, <a href='http://books.google.fr/books/about/Handbook_of_Categorical_Algebra_Categori.html?id=7jgots78faUC'>gBooks</a></p>
+
+<p>3rd vol. <a href='http://www.langtoninfo.com/web_content/9780521441803_toc.pdf'>ToC pdf</a></p>
 
 <p>A review of the book may be found in: Bull. London Math. Soc. <strong>28</strong>:4, 440-442, <a href='http://dx.doi.org/10.1112/blms/28.4.440'>doi</a></p>
 
@@ -798,14 +802,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on June 10, 2017 15:45:29 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (88.77.226.246)
+  Revised on February 26, 2018 14:59:38 
+  by <a class="existingWikiWord" href="/nlab/show/Zoran+%C5%A0koda">Zoran Škoda</a>
+  (193.198.162.14)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Handbook+of+Categorical+Algebra" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Handbook+of+Categorical+Algebra/7" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(7 revisions)</span> | <a href="/nlab/show/diff/Handbook+of+Categorical+Algebra" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Handbook+of+Categorical+Algebra" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Handbook+of+Categorical+Algebra" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Handbook+of+Categorical+Algebra/8" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(8 revisions)</span> | <a href="/nlab/show/diff/Handbook+of+Categorical+Algebra" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Handbook+of+Categorical+Algebra" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
