--- a/pages/6004.html
+++ b/pages/6004.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://www.ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://www.ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -786,15 +786,21 @@ margin-left: 0em;
 </li>
 </ul>
 
+<blockquote>
 <p>Introduction; 1. The language of categories; 2. Limits; 3. Adjoint functors; 4. Generators and projectives; 5. Categories of fractions; 6. Flat functors and Cauchy completeness; 7. Bicategories and distributors; 8. Internal category theory; Bibliography; Index.</p>
+</blockquote>
 
 <p>Vol. 2: Categories and Structures, <a href=''>gBooks</a></p>
 
+<blockquote>
 <p>Preface; Introduction to the handbook; 1. Abelian categories; 2. Regular categories; 3. Algebraic theories; 4. Monads; 5. Accessible categories; 6. Enriched category theory; 7. Topological categories; 8. Fibred categories; Bibliography; Index.</p>
+</blockquote>
 
 <p>3: Categories of Sheaves, <a href='http://books.google.fr/books/about/Handbook_of_Categorical_Algebra_Categori.html?id=7jgots78faUC'>gBooks</a></p>
 
+<blockquote>
 <p>3rd vol. <a href='http://www.langtoninfo.com/web_content/9780521441803_toc.pdf'>ToC pdf</a></p>
+</blockquote>
 
 <p>A review of the book may be found in: Bull. London Math. Soc. <strong>28</strong>:4, 440-442, <a href='http://dx.doi.org/10.1112/blms/28.4.440'>doi</a></p>
 
@@ -802,7 +808,7 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on February 26, 2018 14:59:38 
+  Revised on February 26, 2018 15:00:18 
   by <a class="existingWikiWord" href="/nlab/show/Zoran+%C5%A0koda">Zoran Škoda</a>
   (193.198.162.14)
 </div>
