--- a/pages/8624.html
+++ b/pages/8624.html
@@ -323,10 +323,10 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/sequent'>hypothetical judgement</a>, <a class='existingWikiWord' href='/nlab/show/sequent'>sequent</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/judgment'>hypothetical judgement</a>, <a class='existingWikiWord' href='/nlab/show/sequent'>sequent</a></p>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/antecedent'>antecedents</a> <math class='maruku-mathml' display='inline' id='mathml_98440881b6dc112522168d06f1c9f3f2bef10588_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊢</mo></mrow><annotation encoding='application/x-tex'>\vdash</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/consequent'>consequent</a>, <a class='existingWikiWord' href='/nlab/show/succedent'>succedents</a></li>
+<li><a class='existingWikiWord' href='/nlab/show/antecedent'>antecedents</a> <math class='maruku-mathml' display='inline' id='mathml_9ec4bf56dc5ee1c2f68c07a71aed325e0cfd70b5_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊢</mo></mrow><annotation encoding='application/x-tex'>\vdash</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/consequent'>consequent</a>, <a class='existingWikiWord' href='/nlab/show/succedent'>succedents</a></li>
 </ul>
 </li>
 </ul>
@@ -480,7 +480,7 @@ margin-left: 0em;
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/sequent'>sequent</a></p>
 
-<p><a class='existingWikiWord' href='/nlab/show/hypothesis'>hypothesis</a>/<a class='existingWikiWord' href='/nlab/show/context'>context</a>/<a class='existingWikiWord' href='/nlab/show/antecedent'>antecedent</a> <math class='maruku-mathml' display='inline' id='mathml_98440881b6dc112522168d06f1c9f3f2bef10588_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊢</mo></mrow><annotation encoding='application/x-tex'>\vdash</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/consequent'>conclusion</a>/<a class='existingWikiWord' href='/nlab/show/consequent'>consequence</a>/<a class='existingWikiWord' href='/nlab/show/succedent'>succedent</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/hypothesis'>hypothesis</a>/<a class='existingWikiWord' href='/nlab/show/context'>context</a>/<a class='existingWikiWord' href='/nlab/show/antecedent'>antecedent</a> <math class='maruku-mathml' display='inline' id='mathml_9ec4bf56dc5ee1c2f68c07a71aed325e0cfd70b5_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊢</mo></mrow><annotation encoding='application/x-tex'>\vdash</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/consequent'>conclusion</a>/<a class='existingWikiWord' href='/nlab/show/consequent'>consequence</a>/<a class='existingWikiWord' href='/nlab/show/succedent'>succedent</a></p>
 </li>
 
 <li>
@@ -702,7 +702,7 @@ margin-left: 0em;
 </div>
 
 <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#properties'>Properties</a><ul><li><a href='#categorical_semantics'>Categorical semantics</a></li></ul></li><li><a href='#related_concepts'>Related concepts</a></li></ul></div>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#properties'>Properties</a><ul><li><a href='#categorical_semantics'>Categorical semantics</a></li></ul></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
 <p>The notion of <em>coinductive types</em> is <a class='existingWikiWord' href='/nlab/show/duality'>dual</a> to that of <em><a class='existingWikiWord' href='/nlab/show/inductive+type'>inductive types</a></em>.</p>
@@ -731,17 +731,29 @@ margin-left: 0em;
 
 <p>
 </p>
+
+<h2 id='references'>References</h2>
+
+<ul>
+<li>
+<p>Benedikt Ahrens, Paolo Capriotti, Régis Spadotti, <em>Non-wellfounded trees in Homotopy Type Theory</em>, (<a href='https://arxiv.org/abs/1504.02949'>arXiv:1504.02949</a>)</p>
+</li>
+
+<li>
+<p><em>coinductives</em>, <a href='https://groups.google.com/forum/#!msg/homotopytypetheory/tYRTcI2Opyo/PIrI6t5me-oJ'>discussion</a> on Homotopy type theory mailing list</p>
+</li>
+</ul>
 </div>
 
 <div class="revisedby">
-  Revised on April 15, 2017 05:23:26 
-  by <a class="existingWikiWord" href="/nlab/show/Dexter+Chua">Dexter Chua</a>
-  (223.19.89.160)
+  Revised on February 27, 2018 03:53:50 
+  by <a class="existingWikiWord" href="/nlab/show/David+Corfield">David Corfield</a>
+  (147.147.173.215)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/coinductive+type" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/coinductive+type/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/coinductive+type" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/coinductive+type" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/coinductive+type" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/coinductive+type/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/coinductive+type" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/coinductive+type" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
