--- a/pages/8624.html
+++ b/pages/8624.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -326,7 +326,7 @@ margin-left: 0em;
 <p><a class='existingWikiWord' href='/nlab/show/judgment'>hypothetical judgement</a>, <a class='existingWikiWord' href='/nlab/show/sequent'>sequent</a></p>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/antecedent'>antecedents</a> <math class='maruku-mathml' display='inline' id='mathml_9ec4bf56dc5ee1c2f68c07a71aed325e0cfd70b5_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊢</mo></mrow><annotation encoding='application/x-tex'>\vdash</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/consequent'>consequent</a>, <a class='existingWikiWord' href='/nlab/show/succedent'>succedents</a></li>
+<li><a class='existingWikiWord' href='/nlab/show/antecedent'>antecedents</a> <math class='maruku-mathml' display='inline' id='mathml_b3e1b440692f16ed93463040fc1d5fdc5c131404_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊢</mo></mrow><annotation encoding='application/x-tex'>\vdash</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/consequent'>consequent</a>, <a class='existingWikiWord' href='/nlab/show/succedent'>succedents</a></li>
 </ul>
 </li>
 </ul>
@@ -480,7 +480,7 @@ margin-left: 0em;
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/sequent'>sequent</a></p>
 
-<p><a class='existingWikiWord' href='/nlab/show/hypothesis'>hypothesis</a>/<a class='existingWikiWord' href='/nlab/show/context'>context</a>/<a class='existingWikiWord' href='/nlab/show/antecedent'>antecedent</a> <math class='maruku-mathml' display='inline' id='mathml_9ec4bf56dc5ee1c2f68c07a71aed325e0cfd70b5_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊢</mo></mrow><annotation encoding='application/x-tex'>\vdash</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/consequent'>conclusion</a>/<a class='existingWikiWord' href='/nlab/show/consequent'>consequence</a>/<a class='existingWikiWord' href='/nlab/show/succedent'>succedent</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/hypothesis'>hypothesis</a>/<a class='existingWikiWord' href='/nlab/show/context'>context</a>/<a class='existingWikiWord' href='/nlab/show/antecedent'>antecedent</a> <math class='maruku-mathml' display='inline' id='mathml_b3e1b440692f16ed93463040fc1d5fdc5c131404_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊢</mo></mrow><annotation encoding='application/x-tex'>\vdash</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/consequent'>conclusion</a>/<a class='existingWikiWord' href='/nlab/show/consequent'>consequence</a>/<a class='existingWikiWord' href='/nlab/show/succedent'>succedent</a></p>
 </li>
 
 <li>
@@ -702,7 +702,7 @@ margin-left: 0em;
 </div>
 
 <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#properties'>Properties</a><ul><li><a href='#categorical_semantics'>Categorical semantics</a></li></ul></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#properties'>Properties</a><ul><li><a href='#categorical_semantics'>Categorical semantics</a></li><li><a href='#coinductive_type_formation_in_homotopy_type_theory'>Coinductive type formation in homotopy type theory</a></li></ul></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
 <p>The notion of <em>coinductive types</em> is <a class='existingWikiWord' href='/nlab/show/duality'>dual</a> to that of <em><a class='existingWikiWord' href='/nlab/show/inductive+type'>inductive types</a></em>.</p>
@@ -712,6 +712,16 @@ margin-left: 0em;
 <h3 id='categorical_semantics'>Categorical semantics</h3>
 
 <p>Where the <a class='existingWikiWord' href='/nlab/show/categorical+semantics'>categorical semantics</a> of an <a class='existingWikiWord' href='/nlab/show/inductive+type'>inductive type</a> is an <a class='existingWikiWord' href='/nlab/show/initial+algebra+of+an+endofunctor'>initial algebra for an endofunctor</a>, the semantics of a coinductive type is a <a class='existingWikiWord' href='/nlab/show/terminal+coalgebra+for+an+endofunctor'>terminal coalgebra of an endofunctor</a>.</p>
+
+<h3 id='coinductive_type_formation_in_homotopy_type_theory'>Coinductive type formation in homotopy type theory</h3>
+
+<p>There is an obstacle to dualizing from inductive types</p>
+
+<blockquote>
+<p>The universal property defining (internal) coinductive types in HoTT is dual to the one defining (internal) inductive types. One might hence assume that their existence is equivalent to a set of type-theoretic rules dual (in a suitable sense) to those given for external W-types… However, the rules for external W-types cannot be dualized in a naïve way, due to some asymmetry of HoTT related to dependent types as maps into a “type of types” (a universe) (<a href='#ACS15'>ACS15</a>)</p>
+</blockquote>
+
+<p>However, it is possible to proceed by constructing coinductive types from indexed inductive types (<a href='#ACS15'>ACS15</a>).</p>
 
 <h2 id='related_concepts'>Related concepts</h2>
 
@@ -735,25 +745,25 @@ margin-left: 0em;
 <h2 id='references'>References</h2>
 
 <ul>
-<li>
+<li id='ACS15'>
 <p>Benedikt Ahrens, Paolo Capriotti, Régis Spadotti, <em>Non-wellfounded trees in Homotopy Type Theory</em>, (<a href='https://arxiv.org/abs/1504.02949'>arXiv:1504.02949</a>)</p>
 </li>
 
 <li>
-<p><em>coinductives</em>, <a href='https://groups.google.com/forum/#!msg/homotopytypetheory/tYRTcI2Opyo/PIrI6t5me-oJ'>discussion</a> on Homotopy type theory mailing list</p>
+<p><em>coinductives</em>, <a href='https://groups.google.com/forum/#!msg/homotopytypetheory/tYRTcI2Opyo/PIrI6t5me-oJ'>discussion</a> on Homotopy Type Theory group.</p>
 </li>
 </ul>
 </div>
 
 <div class="revisedby">
-  Revised on February 27, 2018 03:53:50 
+  Revised on February 27, 2018 04:32:52 
   by <a class="existingWikiWord" href="/nlab/show/David+Corfield">David Corfield</a>
   (147.147.173.215)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/coinductive+type" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/coinductive+type/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/coinductive+type" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/coinductive+type" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/coinductive+type" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/coinductive+type/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/coinductive+type" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/coinductive+type" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
