--- a/pages/8624.html
+++ b/pages/8624.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -326,7 +326,7 @@ margin-left: 0em;
 <p><a class='existingWikiWord' href='/nlab/show/judgment'>hypothetical judgement</a>, <a class='existingWikiWord' href='/nlab/show/sequent'>sequent</a></p>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/antecedent'>antecedents</a> <math class='maruku-mathml' display='inline' id='mathml_b3e1b440692f16ed93463040fc1d5fdc5c131404_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊢</mo></mrow><annotation encoding='application/x-tex'>\vdash</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/consequent'>consequent</a>, <a class='existingWikiWord' href='/nlab/show/succedent'>succedents</a></li>
+<li><a class='existingWikiWord' href='/nlab/show/antecedent'>antecedents</a> <math class='maruku-mathml' display='inline' id='mathml_8e6082f76b22a30b2152079a4380734a92e4c76b_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊢</mo></mrow><annotation encoding='application/x-tex'>\vdash</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/consequent'>consequent</a>, <a class='existingWikiWord' href='/nlab/show/succedent'>succedents</a></li>
 </ul>
 </li>
 </ul>
@@ -480,7 +480,7 @@ margin-left: 0em;
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/sequent'>sequent</a></p>
 
-<p><a class='existingWikiWord' href='/nlab/show/hypothesis'>hypothesis</a>/<a class='existingWikiWord' href='/nlab/show/context'>context</a>/<a class='existingWikiWord' href='/nlab/show/antecedent'>antecedent</a> <math class='maruku-mathml' display='inline' id='mathml_b3e1b440692f16ed93463040fc1d5fdc5c131404_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊢</mo></mrow><annotation encoding='application/x-tex'>\vdash</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/consequent'>conclusion</a>/<a class='existingWikiWord' href='/nlab/show/consequent'>consequence</a>/<a class='existingWikiWord' href='/nlab/show/succedent'>succedent</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/hypothesis'>hypothesis</a>/<a class='existingWikiWord' href='/nlab/show/context'>context</a>/<a class='existingWikiWord' href='/nlab/show/antecedent'>antecedent</a> <math class='maruku-mathml' display='inline' id='mathml_8e6082f76b22a30b2152079a4380734a92e4c76b_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊢</mo></mrow><annotation encoding='application/x-tex'>\vdash</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/consequent'>conclusion</a>/<a class='existingWikiWord' href='/nlab/show/consequent'>consequence</a>/<a class='existingWikiWord' href='/nlab/show/succedent'>succedent</a></p>
 </li>
 
 <li>
@@ -715,13 +715,13 @@ margin-left: 0em;
 
 <h3 id='coinductive_type_formation_in_homotopy_type_theory'>Coinductive type formation in homotopy type theory</h3>
 
-<p>There is an obstacle to dualizing from inductive types</p>
+<p>There is an obstacle to the complete <a class='existingWikiWord' href='/nlab/show/duality'>dualization</a> of the usual rules for <a class='existingWikiWord' href='/nlab/show/inductive+type'>inductive types</a> in <a class='existingWikiWord' href='/nlab/show/homotopy+type+theory'>homotopy type theory</a>, including dualizing the <a class='existingWikiWord' href='/nlab/show/induction'>induction principle</a> to a “coinduction principle”. For this some form of “codependent types” would be needed.</p>
 
 <blockquote>
 <p>The universal property defining (internal) coinductive types in HoTT is dual to the one defining (internal) inductive types. One might hence assume that their existence is equivalent to a set of type-theoretic rules dual (in a suitable sense) to those given for external W-types… However, the rules for external W-types cannot be dualized in a naïve way, due to some asymmetry of HoTT related to dependent types as maps into a “type of types” (a universe) (<a href='#ACS15'>ACS15</a>)</p>
 </blockquote>
 
-<p>However, it is possible to proceed by constructing coinductive types from indexed inductive types (<a href='#ACS15'>ACS15</a>).</p>
+<p>However, it is possible instead to dualize the alternative characterization of inductive types as <a class='existingWikiWord' href='/nlab/show/initial+algebra+of+an+endofunctor'>initial algebras</a> for a notion of coinductive types as <a class='existingWikiWord' href='/nlab/show/terminal+coalgebra+for+an+endofunctor'>terminal coalgebras</a>, and that can be formulated (and often constructed) in ordinary HoTT. In (<a href='#ACS15'>ACS15</a>) the authors proceed to construct coinductive types from indexed inductive types.</p>
 
 <h2 id='related_concepts'>Related concepts</h2>
 
@@ -756,14 +756,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on February 27, 2018 04:32:52 
+  Revised on February 27, 2018 08:30:21 
   by <a class="existingWikiWord" href="/nlab/show/David+Corfield">David Corfield</a>
   (147.147.173.215)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/coinductive+type" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/coinductive+type/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/coinductive+type" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/coinductive+type" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/coinductive+type" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/coinductive+type/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/coinductive+type" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/coinductive+type" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
