--- a/pages/11121.html
+++ b/pages/11121.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -423,7 +423,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/Beilinson-Bernstein+localization'>Beĭlinson-Bernstein localization</a></p>
+<p><span class='newWikiWord'>Be?linson-Bernstein localization<a href='/nlab/new/Be%3Flinson-Bernstein+localization'>?</a></span></p>
 </li>
 
 <li>
@@ -440,7 +440,7 @@ margin-left: 0em;
 </p>
 </div></div>
 
-<h4 id='cohesive_toposes'>Cohesive <math class='maruku-mathml' display='inline' id='mathml_45e4641920424852f97af83e557952c3d018a287_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-Toposes</h4>
+<h4 id='cohesive_toposes'>Cohesive <math class='maruku-mathml' display='inline' id='mathml_62b00c380ed9f6d8c3c54e5d1ad3a74af9085778_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-Toposes</h4>
 
 <div class='hide'>
 <p><strong><a class='existingWikiWord' href='/nlab/show/cohesive+topos'>cohesive topos</a></strong></p>
@@ -525,7 +525,7 @@ margin-left: 0em;
 </li>
 </ul>
 
-<h2 id='structures_in_a_cohesive_topos'>Structures in a cohesive <math class='maruku-mathml' display='inline' id='mathml_45e4641920424852f97af83e557952c3d018a287_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-topos</h2>
+<h2 id='structures_in_a_cohesive_topos'>Structures in a cohesive <math class='maruku-mathml' display='inline' id='mathml_62b00c380ed9f6d8c3c54e5d1ad3a74af9085778_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-topos</h2>
 
 <p><strong><a class='existingWikiWord' href='/nlab/show/cohesive+%28infinity%2C1%29-topos+--+structures'>structures in a cohesive (∞,1)-topos</a></strong></p>
 
@@ -676,7 +676,7 @@ margin-left: 0em;
 
 <p><em>Global Homotopy Theory and Cohesion</em></p>
 
-<p>(<a href='http://www.math.uiuc.edu/~rezk/global-cohesion.pdf'>pdf</a>)</p>
+<p>(<a href='http://www.math.uiuc.edu/~rezk/global-cohesion.pdf'>pdf</a>, <a class='existingWikiWord' href='/nlab/files/Rezk14.pdf' title='pdf'>pdf</a>)</p>
 </li>
 </ul>
 
@@ -688,14 +688,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on August 12, 2015 09:03:32 
+  Revised on February 27, 2018 10:28:21 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (80.92.246.195)
+  (91.230.41.202)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Global+Homotopy+Theory+and+Cohesion" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Global+Homotopy+Theory+and+Cohesion/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Global+Homotopy+Theory+and+Cohesion" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Global+Homotopy+Theory+and+Cohesion" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Global+Homotopy+Theory+and+Cohesion" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Global+Homotopy+Theory+and+Cohesion/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Global+Homotopy+Theory+and+Cohesion" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Global+Homotopy+Theory+and+Cohesion" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
