--- a/pages/17039.html
+++ b/pages/17039.html
@@ -675,7 +675,7 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/finite+quantum+mechanics+in+terms+of+dagger-compact+categories'>in terms of †-compact categories</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/finite+quantum+mechanics+in+terms+of+dagger-compact+categories'>in terms of ∞-compact categories</a></p>
 </li>
 
 <li>
@@ -1358,7 +1358,7 @@ margin-left: 0em;
 
 <h3 id='derived_stacks_in_symplectic_geometry_damien_calaque'>Derived stacks in symplectic geometry (Damien Calaque)</h3>
 
-<p><a class='existingWikiWord' href='/nlab/show/Damien+Calaque'>Damien Calaque</a> on <a class='existingWikiWord' href='/nlab/show/derived+geometry'>derived</a> <a class='existingWikiWord' href='/nlab/show/symplectic+geometry'>symplectic geometry</a>.</p>
+<p><a class='existingWikiWord' href='/nlab/show/Damien+Calaque'>Damien Calaque</a> on <a class='existingWikiWord' href='/nlab/show/derived+geometry'>derived</a> <a class='existingWikiWord' href='/nlab/show/symplectic+geometry'>symplectic geometry</a> (<a href='https://arxiv.org/abs/1802.09643'>arXiv:1802.09643</a>)</p>
 
 <h3 id='Schreiber'>Higher pre-quantized geometry (Urs Schreiber)</h3>
 
@@ -1422,14 +1422,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on April 12, 2017 06:15:20 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (185.25.95.132)
+  Revised on February 28, 2018 14:52:09 
+  by <a class="existingWikiWord" href="/nlab/show/David+Corfield">David Corfield</a>
+  (147.147.173.215)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/New+Spaces+for+Mathematics+and+Physics" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/New+Spaces+for+Mathematics+and+Physics/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/New+Spaces+for+Mathematics+and+Physics" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/New+Spaces+for+Mathematics+and+Physics" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/New+Spaces+for+Mathematics+and+Physics" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/New+Spaces+for+Mathematics+and+Physics/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/New+Spaces+for+Mathematics+and+Physics" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/New+Spaces+for+Mathematics+and+Physics" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
