--- a/pages/19046.html
+++ b/pages/19046.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -643,10 +643,10 @@ margin-left: 0em;
 </div>
 
 <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#definition'>Definition</a></li><li><a href='#properties'>Properties</a></li><li><a href='#example'>Example</a></li><li><a href='#related_entries'>Related entries</a></li><li><a href='#references'>References</a></li></ul></div>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#definition'>Definition</a></li><li><a href='#properties'>Properties</a></li><li><a href='#examples'>Examples</a></li><li><a href='#related_entries'>Related entries</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>An <strong>exponentiable topos</strong> is a generalization of the notion of an exponentiable <a class='existingWikiWord' href='/nlab/show/locale'>locale</a> and can be viewed as a (topological) “space” <math class='maruku-mathml' display='inline' id='mathml_c6b080d4820ce98f57aab81fec1c61a4df0681f6_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math> that behaves well with respect to the construction of mapping spaces <math class='maruku-mathml' display='inline' id='mathml_c6b080d4820ce98f57aab81fec1c61a4df0681f6_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>Y</mi> <mi>X</mi></msup></mrow><annotation encoding='application/x-tex'>Y^X</annotation></semantics></math>.</p>
+<p>An <strong>exponentiable topos</strong> is a generalization of the notion of an exponentiable <a class='existingWikiWord' href='/nlab/show/locale'>locale</a> and can be viewed as a (topological) “space” <math class='maruku-mathml' display='inline' id='mathml_775168392cdf3ef636d0d65b4a25349418e2a122_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math> that behaves well with respect to the construction of mapping spaces <math class='maruku-mathml' display='inline' id='mathml_775168392cdf3ef636d0d65b4a25349418e2a122_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>Y</mi> <mi>X</mi></msup></mrow><annotation encoding='application/x-tex'>Y^X</annotation></semantics></math>.</p>
 
 <p>The concept generalizes to <a class='existingWikiWord' href='/nlab/show/higher+topos+theory'>higher topos theory</a>.</p>
 
@@ -656,11 +656,21 @@ margin-left: 0em;
 
 <h2 id='properties'>Properties</h2>
 
-<p>…</p>
+<p>The following theorem generalizes a result of <a class='existingWikiWord' href='/nlab/show/Martin+Hyland'>Martin Hyland</a> on expenentiable locales to Grothendieck toposes.</p>
 
-<h2 id='example'>Example</h2>
+<div class='num_prop'>
+<h6 id='theorem'>Theorem</h6>
 
-<p>…</p>
+<p>A <a class='existingWikiWord' href='/nlab/show/Grothendieck+topos'>Grothendieck topos</a> <math class='maruku-mathml' display='inline' id='mathml_775168392cdf3ef636d0d65b4a25349418e2a122_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℰ</mi></mrow><annotation encoding='application/x-tex'>\mathcal{E}</annotation></semantics></math> is an exponentiable object in the 2-category of Grothendieck toposes and <a class='existingWikiWord' href='/nlab/show/geometric+morphism'>geometric morphisms</a> iff <math class='maruku-mathml' display='inline' id='mathml_775168392cdf3ef636d0d65b4a25349418e2a122_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℰ</mi></mrow><annotation encoding='application/x-tex'>\mathcal{E}</annotation></semantics></math> is a <a class='existingWikiWord' href='/nlab/show/continuous+category'>continuous category</a>.</p>
+</div>
+
+<p>This result is due to Johnstone-Joyal (<a href='#JJ82'>19812</a>) and occurs as theorem 4.4.5 (p.748) of the <a class='existingWikiWord' href='/nlab/show/Elephant'>Elephant</a> (<a href='#J02'>Johnstone (2002)</a>.</p>
+
+<h2 id='examples'>Examples</h2>
+
+<ul>
+<li>Since <a class='existingWikiWord' href='/nlab/show/locally+finitely+presentable+category'>locally finitely presentable categories</a> are <a class='existingWikiWord' href='/nlab/show/continuous+category'>continuous</a> and <a class='existingWikiWord' href='/nlab/show/coherent+topos'>coherent toposes</a> are locally finitely presentable (cf. Johnstone (<a href='#J02'>2002, p.915</a>)) it follows that <em>coherent toposes are exponentiable</em>. This can be viewed as an avatar of the fact that locally compact topological spaces behave well with respect to mapping spaces.</li>
+</ul>
 
 <h2 id='related_entries'>Related entries</h2>
 
@@ -694,28 +704,36 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p>Mathieu Anel, Damien Lejay, <em>Exponentiable Higher Toposes</em> , arXiv:1802.10425 (2018). (<a href='https://arxiv.org/abs/1802.10425'>abstract</a>)</p>
+<p><a class='existingWikiWord' href='/nlab/show/Mathieu+Anel'>Mathieu Anel</a>, Damien Lejay, <em>Exponentiable Higher Toposes</em> , arXiv:1802.10425 (2018). (<a href='https://arxiv.org/abs/1802.10425'>abstract</a>)</p>
 </li>
 
-<li>
+<li id='JJ82'>
 <p><a class='existingWikiWord' href='/nlab/show/Peter+Johnstone'>Peter Johnstone</a>, <a class='existingWikiWord' href='/nlab/show/Andre+Joyal'>André Joyal</a>, <em>Continuous categories and exponentiable toposes</em> , JPAA <strong>25</strong> (1982) pp.255-296.</p>
 </li>
 
-<li>
+<li id='J02'>
 <p><a class='existingWikiWord' href='/nlab/show/Peter+Johnstone'>Peter Johnstone</a>, <em>Sketches of Elephant vol.2</em> , CUP 2002. (section C4.4 pp.745-754)</p>
 </li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Susan+Niefield'>Susan Niefield</a>, <em>Exponentiable Morphisms: posets, spaces, locales and Grothendieck toposes</em> , TAC <strong>8</strong> (2001) pp.16-32. (<a href='http://www.tac.mta.ca/tac/volumes/8/n2/8-02abs.html'>abstract</a>)</p>
+</li>
 </ul>
+
+<p>
+ 
+</p>
 </div>
 
 <div class="revisedby">
-  Created on March  1, 2018 06:54:33 
+  Revised on March  1, 2018 07:58:39 
   by <a class="existingWikiWord" href="/nlab/show/Thomas+Holder">Thomas Holder</a>
-  (89.204.135.89)
+  (89.204.130.125)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/exponentiable+topos" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/exponentiable+topos" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/exponentiable+topos/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/exponentiable+topos" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/exponentiable+topos" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
